examples/type_system/failing/149_cross_module_constructor_access_strict.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// E086 (strict): cross-module constructor access is blocked in strict mode.

import TypeSystem.BoundaryCtor

fn main() {
    let _x = TypeSystem.BoundaryCtor.SomeInt(1)
}
